<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_categories"
        android:checkableBehavior="single">

        <item
            android:id="@+id/top_news_dest"
            android:icon="@drawable/category_top_news"
            android:title="@string/category_top_news" />

        <item
            android:id="@+id/sports_news_dest"
            android:icon="@drawable/category_sport"
            android:title="@string/category_sports" />

        <item
            android:id="@+id/entertainment_news_dest"
            android:icon="@drawable/category_entertainment"
            android:title="@string/category_entertainment" />

        <item
            android:id="@+id/technology_news_dest"
            android:icon="@drawable/category_technology"
            android:title="@string/category_technology" />

        <item
            android:id="@+id/business_news_dest"
            android:icon="@drawable/category_business"
            android:title="@string/category_business" />

        <item
            android:id="@+id/health_news_dest"
            android:icon="@drawable/category_health"
            android:title="@string/category_health" />

        <item
            android:id="@+id/science_news_dest"
            android:icon="@drawable/category_science"
            android:title="@string/category_science" />
    </group>

    <group>
        <item
            android:id="@+id/fav_news_dest"
            android:icon="@drawable/ic_favorites"
            android:title="@string/category_favorites" />
    </group>
</menu>