<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
...
                app:layout_behavior="com.droidafricana.globalmail.CustomScrollingViewBehavior"
                app:navGraph="@navigation/news_nav_graph" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/navigation_drawer_max_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/my_background"
        android:elevation="@dimen/nav_drawer_elevation"
        android:theme="@style/AppTheme.NavigationView"
...
