...
        <variable
            name="entFragmentViewModel"
            type="com.droidafricana.globalmail.ui.entertainment.EntertainmentViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/ent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
...
