...
        <variable
            name="favFragmentViewModel"
            type="com.droidafricana.globalmail.ui.favs.FavsViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/fav_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
...
